fix: fixed scss spacing

--- a/src/presentation/components/button/button.scss
+++ b/src/presentation/components/button/button.scss
@@ -18,7 +18,7 @@
   border-style: solid;
   font-size: 1.4rem;
   border-radius: 50px;
-  border-color: $darkpurple;  
+  border-color: $darkpurple;
   background-color: $purple;
   margin-right: 5px;
   cursor: pointer;
@@ -30,14 +30,12 @@
     background-color: hsl(255, 60%, 94%);
     color: hsl(255, 60%, 31%);
   }
-
 }
 
 .proceed {
   border-color: $darkgreen;
   background-color: $green;
   cursor: pointer;
-  transition: 500ms;
   color: white;
   font-weight: bold;
   letter-spacing: 0.2rem;
